tests/ui/discord-frontend/entity_macro/expected_literal_17.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_17.rs:40:53
   |
LL |     relates = [multiple "MemberEntity": via "id" as guild_id]
   |                                                     ^^^^^^^^

error: aborting due to 1 previous error

